/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

package test_init

import (
	"testing"

	"magma/orc8r/cloud/go/orc8r"
	"magma/orc8r/cloud/go/services/streamer"
	streamer_servicers "magma/orc8r/cloud/go/services/streamer/servicers/southbound"
	"magma/orc8r/cloud/go/test_utils"
	"magma/orc8r/lib/go/protos"
)

type testStreamerServer struct {
	protos.StreamerServer
}

func (srv *testStreamerServer) GetUpdates(req *protos.StreamRequest, stream protos.Streamer_GetUpdatesServer) error {
	return streamer_servicers.GetUpdatesUnverified(req, stream)
}

func StartTestService(t *testing.T) {
	srv, lis, _ := test_utils.NewTestOrchestratorService(t, orc8r.ModuleName, streamer.ServiceName, nil, nil)
	protos.RegisterStreamerServer(srv.GrpcServer, &testStreamerServer{})
	go srv.RunTest(lis, nil)
}
